; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_utlock.c_acpi_ut_release_read_lock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_utlock.c_acpi_ut_release_read_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_rw_lock = type { i64, i32, i32 }

@ACPI_WAIT_FOREVER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_ut_release_read_lock(%struct.acpi_rw_lock* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.acpi_rw_lock*, align 8
  %4 = alloca i32, align 4
  store %struct.acpi_rw_lock* %0, %struct.acpi_rw_lock** %3, align 8
  %5 = load %struct.acpi_rw_lock*, %struct.acpi_rw_lock** %3, align 8
  %6 = getelementptr inbounds %struct.acpi_rw_lock, %struct.acpi_rw_lock* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load i32, i32* @ACPI_WAIT_FOREVER, align 4
  %9 = call i32 @acpi_os_acquire_mutex(i32 %7, i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i64 @ACPI_FAILURE(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i32, i32* %4, align 4
  store i32 %14, i32* %2, align 4
  br label %35

15:                                               ; preds = %1
  %16 = load %struct.acpi_rw_lock*, %struct.acpi_rw_lock** %3, align 8
  %17 = getelementptr inbounds %struct.acpi_rw_lock, %struct.acpi_rw_lock* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = add nsw i64 %18, -1
  store i64 %19, i64* %17, align 8
  %20 = load %struct.acpi_rw_lock*, %struct.acpi_rw_lock** %3, align 8
  %21 = getelementptr inbounds %struct.acpi_rw_lock, %struct.acpi_rw_lock* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp eq i64 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %15
  %25 = load %struct.acpi_rw_lock*, %struct.acpi_rw_lock** %3, align 8
  %26 = getelementptr inbounds %struct.acpi_rw_lock, %struct.acpi_rw_lock* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @acpi_os_release_mutex(i32 %27)
  br label %29

29:                                               ; preds = %24, %15
  %30 = load %struct.acpi_rw_lock*, %struct.acpi_rw_lock** %3, align 8
  %31 = getelementptr inbounds %struct.acpi_rw_lock, %struct.acpi_rw_lock* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @acpi_os_release_mutex(i32 %32)
  %34 = load i32, i32* %4, align 4
  store i32 %34, i32* %2, align 4
  br label %35

35:                                               ; preds = %29, %13
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @acpi_os_acquire_mutex(i32, i32) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1

declare dso_local i32 @acpi_os_release_mutex(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
